force-app/main/default/objects/OCR_Send_Log__c/OCR_Send_Log__c.object-meta.xml
<CustomObject>
    <description>Log of files with their MD5 checksums that are due for OCR processing</description>
    <label>OCR Send Log</label>
    <nameField>
        <label>OCR Send Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCR Send Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>