force-app/main/default/objects/OCR_Send_Log__c/fields/Checksum__c.field-meta.xml
<CustomField>
    <fullName>Checksum__c</fullName>
    <description>Copy of value from Content Version for this file</description>
    <label>Checksum</label>
    <length>50</length>
    <type>Text</type>
</CustomField>