force-app/main/default/objects/OCR_Send_Log__c/fields/ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionId__c</fullName>
    <description>Related record Id of document that was sent to OCR Api</description>
    <label>ContentVersionId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>