force-app/main/default/objects/OCR_Send_Log__c/fields/JsonVersionId__c.field-meta.xml
<CustomField>
    <fullName>JsonVersionId__c</fullName>
    <label>JsonVersionId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>