force-app/main/default/objects/OCR_Send_Log__c/fields/Resend__c.field-meta.xml
<CustomField>
    <fullName>Resend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resend</label>
    <type>Checkbox</type>
</CustomField>