force-app/main/default/objects/OCR_Send_Log__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <length>20</length>
    <type>Text</type>
</CustomField>