force-app/main/default/objects/OCR_Send_Log__c/fields/Staged__c.field-meta.xml
<CustomField>
    <fullName>Staged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staged</label>
    <type>Checkbox</type>
</CustomField>