force-app/main/default/objects/OCR_Send_Log__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>File Title</description>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>